--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PI3"
         tools:targetApi="31">
-        <activity
+
+        <!-- REMOVA ISSO ↓ (MainActivity não é mais usada) -->
+        <!-- <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> -->
 
+        <!-- Tela de Login (AGORA É A PRINCIPAL) -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Tela de Cadastro -->
+        <activity android:name=".CadastroActivity"/>
+
     </application>
 
 </manifest>
