--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,17 +15,6 @@
         android:theme="@style/Theme.PI3"
         tools:targetApi="31">
 
-        <!-- REMOVA ISSO ↓ (MainActivity não é mais usada) -->
-        <!-- <activity
-            android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> -->
-
-        <!-- Tela de Login (AGORA É A PRINCIPAL) -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -33,8 +24,13 @@
             </intent-filter>
         </activity>
 
-        <!-- Tela de Cadastro -->
-        <activity android:name=".CadastroActivity"/>
+        <activity
+            android:name=".CadastroActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".IncidentRegistrationActivity"
+            android:exported="false"/>
 
     </application>
 
