--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" /> <!-- Remova se não estiver usando imagens -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.PI3"
         tools:targetApi="31">
 
-        <!-- LoginActivity como a tela inicial do app -->
+        <!-- primeira tela do programa é a de login -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -25,20 +25,20 @@
             </intent-filter>
         </activity>
 
-        <!-- CadastroActivity (não é exportada) -->
+        <!-- (redirecionar para Cadastro) -->
         <activity
             android:name=".CadastroActivity"
             android:exported="false"/>
 
-        <!-- IncidentRegistrationActivity (não é exportada) -->
+        <!-- (redirecionar para Registro de Risco) -->
         <activity
             android:name=".IncidentRegistrationActivity"
             android:exported="false"/>
 
-        <!-- InicialActivity (adicionada para que seja redirecionado após login) -->
+        <!-- (redirecionar para Tela Principal) -->
         <activity
             android:name=".InicialActivity"
-            android:exported="true" /> <!-- Certifique-se de que a InicialActivity está registrada -->
+            android:exported="true" />
 
     </application>
 
