adição de git ignore e agora o codigo envia imagens como url e salva elas no cloudinary e firebase, camera nn funciona

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.pi3">
 
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -23,15 +26,17 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.provider"
+            android:authorities="com.example.pi3.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/file_paths" />
         </provider>
 
-        <!-- primeira tela do programa é a de login -->
+        <activity android:name=".InicialActivity" android:exported="true" />
+        <activity android:name=".IncidentRegistrationActivity" android:exported="false" />
+        <activity android:name=".CadastroActivity" android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -40,21 +45,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!-- (redirecionar para Cadastro) -->
-        <activity
-            android:name=".CadastroActivity"
-            android:exported="false"/>
-
-        <!-- (redirecionar para Registro de Risco) -->
-        <activity
-            android:name=".IncidentRegistrationActivity"
-            android:exported="false"/>
-
-        <!-- (redirecionar para Tela Principal) -->
-        <activity
-            android:name=".InicialActivity"
-            android:exported="true" />
 
     </application>
 
