--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Android Studio
 *.iml
 .gradle
 /local.properties
@@ -7,9 +8,37 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/inspectionProfiles
+
+# Build outputs
+/build/
+/app/build/
+/captures/
+/externalNativeBuild/
+/.cxx/
+
+# Sensitive files
+*.keystore
+*.jks
+google-services.json
+
+# Temp and log files
+*.log
+*.tmp
+*.bak
+*.swp
+*.swo
+*.orig
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
-local.properties
+
+# Gradle wrapper cache
+/gradle/wrapper/gradle-wrapper.properties
+
+# Firebase / Crashlytics (se usar)
+crashlytics-build.properties
+fabric.properties
+
+# Test results and outputs
+/test-output/
+/test-results/
+/outputs/
